<resources>
    <string name="app_name">TardiLang</string>
    <string name="login_title">Silakan login!</string>
    <string name="email_input_label">Email</string>
    <string name="password_input_label">Password</string>
    <string name="login_button">Login</string>
    <string name="register_label">Belum Punya Akun?</string>
    <string name="register_button">Register</string>
    <string name="register_title">Silahkan daftar akun!</string>
    <string name="login_label">Sudah Punya Akun?</string>
    <string name="confirm_password_input_label">Konfirmasi Password</string>
    <string name="name_input_label">Nama</string>
    <string name="pin_create_label">Buat PIN Orang Tua</string>
    <string name="pin_enter_label">Masukkan PIN Orang Tua</string>
    <string name="continue_label">Lanjut</string>
    <string name="input_empty">%1$s tidak boleh kosong</string>
    <string name="email_not_valid">Email tidak valid</string>
    <string name="password_empty">Password tidak boleh kosong</string>
    <string name="password_min_length">Password harus punya minimal 8 karakter</string>
    <string name="stat_title">Statistik Belajar</string>
    <string name="profile_title">Profilmu</string>
    <string name="child_setting">Pengaturan Anak</string>
    <string name="new_child_profile">Profil Baru</string>
    <string name="profile_setting">Pengaturan Profil</string>
    <string name="edit_info_account">Ubah Informasi Akun</string>
    <string name="logout">Logout</string>
    <string name="statistic">Statistik</string>
    <string name="to_children_area">Ke area anak</string>
    <string name="profile">Profil</string>
    <string name="child_profile_add_title">Buat Profil Anak</string>
    <string name="child_profile_edit_title">Profil Anak</string>
    <string name="birthdate_input_label">Tanggal Lahir</string>
    <string name="add_child_profile">Buat Profil Anak</string>
    <string name="save_child_profile">Simpan Perubahan</string>
    <string name="no_test_warning">Anak ini belum melakukan ujian kemampuan. Lakukan ujian agar bisa mengakses area belajar anak.</string>
    <string name="take_test">Lakukan Ujian!</string>
    <string name="creation_success_head">Profil anak berhasil dibuat! Lanjutkan ke ujian kemampuan anak?</string>
    <string name="creation_success_body">Ujian kemampuan anak akan digunakan untuk menentukan materi sesuai kemampuan anak. Lanjutkan ke ujian?</string>
    <string name="child_test">Ujian Kemampuan Anak</string>
    <string name="back_to_dashboard">Kembali ke Dashboard</string>
    <string name="creation_success_image_desc">Ikon pembuatan profil anak berhasil</string>
    <string name="creation_success_title">Profil anak dibuat!</string>
    <string name="choose_child_title">Pilih Profil Anak</string>
    <string name="add_label">Tambah</string>
    <string name="not_taken_test">Belum mengambil ujian</string>
    <string name="child_level">Level %1$d</string>
    <string name="cancel">Batal</string>
    <string name="confirm_password_not_match">Konfirmasi password tidak sama</string>
    <string name="loading">Tunggu sebentar...</string>
    <string name="try_again">coba lagi</string>
    <string name="not_available_yet">Fitur ini masih belum tersedia</string>
    <string name="pin_not_valid">Pin not valid</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lessons">Pelajaran</string>
    <string name="latest_lesson">Baru selesai</string>
    <string name="current_lessons">Sedang dipelajari</string>
    <string name="show_all">Lihat semua</string>
    <string name="badges_achievement">Badge dan Achievement</string>
    <string name="latest_badges">Badge terbaru</string>
    <string name="finished_lessons">Telah selesai</string>
    <string name="latest_achievements">Achievement Terbaru</string>
    <string name="no_data">Belum ada data</string>
    <string name="no_children">Anda masih belum mempunyai profil anak</string>
    <string name="usages">Waktu Pakai</string>
    <string name="today">Hari ini</string>
    <string name="this_week">Seminggu ini</string>
    <string name="question_no_x">Soal %1$d</string>
    <string name="previous">Sebelumnya</string>
    <string name="placement_quiz">Ujian Kemampuan</string>
    <string name="btn_action_text_photo">Ambil Foto Jawaban</string>
    <string name="tv_warning_text_photo">Siapkan kertas dan alat tulis! Tulis jawabanmu di kertas lalu foto!</string>
    <string name="btn_action_text_audio">Rekam Jawaban</string>
    <string name="tv_warning_text_audio">Ini soal speaking! Rekam suara jawabamu jika sudah siap!</string>
    <string name="send_answers">Kumpulkan</string>
    <string name="have_took_test">Ujian kemampuan anak selesai</string>
</resources>