<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.parent.childcreated.ChildCreatedFragment">

    <ImageView
        android:id="@+id/creation_success_image"
        android:layout_width="163dp"
        android:layout_height="163dp"
        android:contentDescription="@string/creation_success_image_desc"
        android:src="@drawable/child_creation_success"
        app:layout_constraintBottom_toTopOf="@+id/creation_success_head_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/creation_success_head_text"
        style="@style/Text.Heading.4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="12dp"
        android:text="@string/creation_success_head"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/creation_success_body_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_success_image" />

    <TextView
        android:id="@+id/creation_success_body_text"
        style="@style/Text.Body.2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="12dp"
        android:text="@string/creation_success_body"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/take_test_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_success_head_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/take_test_btn"
        style="@style/Button.Parent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="12dp"
        android:text="@string/child_test"
        app:icon="@drawable/ic_baseline_arrow_forward_24"
        app:iconGravity="textEnd"
        app:layout_constraintBottom_toTopOf="@+id/dashboard_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creation_success_body_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dashboard_btn"
        style="@style/Button.Parent.Secondary.Alternative"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="12dp"
        android:text="@string/back_to_dashboard"
        app:icon="@drawable/ic_baseline_arrow_back_24"
        app:iconGravity="textStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/take_test_btn" />
</androidx.constraintlayout.widget.ConstraintLayout>